hero: base styling

--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -1,5 +1,25 @@
-<h1>Montserrat</h1>
-
-<div class="container">
-    <h2>Mit Seitenpadding</h2>
-</div>
+<section class="hero">
+    <div class="container">
+        <div class="hero__main-content">
+            <div class="hero__left">
+                <img src="./assets/img/personal-img.png" alt="Image of Developer" draggable="false">
+            </div>
+            <div class="hero__right">
+                <h1><span class="greet">Hello! I am Devrim</span>
+                    <br>FRONTEND DEVELOPER</h1>
+            </div>
+        </div>
+        <div class="hero__icons">
+            <a href="">
+                <img src="./assets/img/github.svg" alt="GitHub Icon">
+            </a>
+            <a href="">
+                <img src="./assets/img/mail.svg" alt="Mail Icon">
+            </a>
+            <a href="">
+                <img src="./assets/img/linkedin.svg" alt="Linkedin Icon">
+            </a>
+        </div>
+    </div>
+    <img class="ellipse" src="./assets/img/ellipse.svg" draggable="false" alt="ellipse">
+</section>
