style(hero): styling added

--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -21,5 +21,13 @@
             </a>
         </div>
     </div>
-    <img class="ellipse" src="./assets/img/ellipse.svg" draggable="false" alt="ellipse">
+    <div class="ellipse-container">
+        <img class="ellipse" src="./assets/img/ellipse.svg" draggable="false" alt="ellipse">
+    </div>
+    <div class="hero__scroll">
+        <span>SCROLL</span>
+        <div></div>
+    </div>
+    
+    <img class="ellipse-overlap" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
 </section>
