style(header): styling finished

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<header>
+    <div class="container">
+        <div class="header-container">
+            <img src="./assets/img/logo.svg" alt="Logo">
+            <nav>
+                <ul>
+                    <li><a href="">About Me</a></li>
+                    <li><a href="">Skill Set</a></li>
+                    <li><a href="">My Work</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
