--- a/src/app/main-content/hero/hero.component.scss
+++ b/src/app/main-content/hero/hero.component.scss
@@ -58,6 +58,7 @@
         right: 0;
         @include flexbox($fd: column, $gap: 32px);
         padding-bottom: 32px;
+        padding-right: inherit;
 
         img {
             display: block;
