--- a/src/app/shared/styles/mixins.scss
+++ b/src/app/shared/styles/mixins.scss
@@ -6,17 +6,17 @@
     gap: $gap;
 }
 
-@mixin page-margin {
-    margin-left: 92px;
-    margin-right: 92px;
+@mixin page-padding {
+    padding-left: 92px;
+    padding-right: 92px;
 
     @media(max-width: 991.98px) {
-        margin-left: 32px;
-        margin-right: 32px;
+        padding-left: 32px;
+        padding-right: 32px;
     }
 
     @media(max-width: 767.98px) {
-        margin-left: 16px;
-        margin-right: 16px;
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
