--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,5 +181,5 @@ h1, h2, h3, h4 {
     max-width: 1920px;
     width: 100%;
     margin: 0 auto;
-    @include page-margin;
+    @include page-padding;
 }
