style(about): initial styling

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,1 +1,16 @@
-<p>about-me works!</p>
+<section>
+    <div class="container">
+        <div class="about__container">
+            <h2>Let's work together</h2>
+            <div>
+                <p>I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.
+                    I am looking forward to continuing my developer career with a job in a junior web developer position.
+                    <br><br>
+                    If you think I'd be a good match for your projects, contact me!
+                </p>
+                <a href="" class="main-button">Send a message</a>
+            </div>
+        </div>
+        <img class="ellipse" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
+    </div>
+</section>
