--- a/src/app/main-content/skill-set/skill-set.component.scss
+++ b/src/app/main-content/skill-set/skill-set.component.scss
@@ -2,7 +2,7 @@
 @import '../../shared/styles/variables.scss';
 
 section {
-    background-image: linear-gradient(to bottom right, $main-color, $secondary-color);
+    background-image: linear-gradient(to bottom right, $main-color 50%, $secondary-color);
     padding-bottom: 120px;
     padding-top: 120px;
 }
