--- a/src/styles.scss
+++ b/src/styles.scss
@@ -199,7 +199,7 @@ h4 {
     padding: 14px 32px;
     text-decoration: none;
     transition: .125s ease-in-out;
-    background-image: linear-gradient(to top left, transparent 50%, $main-color 50%, $secondary-color);
+    background-image: linear-gradient(to top left, transparent 50%, $secondary-color 50%, $main-color 80%);
     background-size: 200% 200%;
     background-position: bottom right;
     position: relative;
