--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -4,6 +4,7 @@
 section {
     padding-top: 120px;
     padding-bottom: 120px;
+    overflow: hidden;
 }
 
 .intro {
@@ -14,10 +15,30 @@ section {
         color: $main-color;
         font-size: 96px;
         padding-bottom: 32px;
+
+        .ellipse-1 {
+            position: relative;
+            z-index: -1;
+            left: 80px;
+            bottom: 32px;
+            width: 100px;
+            display: inline-block;
+        }
     }
 
     p {
         color: $font-black;
         font-size: 23px;
     }
+}
+
+.ellipse-2 {
+    box-sizing: content-box;
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    top: 80px;
+    padding-right: inherit;
+    width: 180px;
+    display: inline-block;
 }
