--- a/src/app/main-content/my-work/work-sample/work-sample.component.html
+++ b/src/app/main-content/my-work/work-sample/work-sample.component.html
@@ -1,7 +1,12 @@
 <div class="work-sample" [class.jc-end]="index % 2 !== 0" [style.padding-bottom.px]="samplesLength - 1 == index ? 0 : null">
-    <a href="">
-        <img [src]="sample.image" [alt]="'Image of ' + sample.title">
-    </a>
+    <div class="sample-img-container">
+        <a href="">
+            <img class="sample-img" [src]="sample.image" [alt]="'Image of ' + sample.title">
+        </a>
+        <img *ngIf="index == 0" class="ellipse-3" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
+        <img *ngIf="index == 1" class="ellipse-4" src="./assets/img/ellipse-left.svg" alt="ellipse" draggable="false">
+    </div>
+
     <div class="work-description" [class.ai-end]="index % 2 !== 0">
         <h3>{{ sample.title }}</h3>
         <div>{{ sample.tools }}</div>
