style(contact): initial styling

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,1 +1,32 @@
-<p>contact works!</p>
+<section>
+    <div class="container">
+        <h2>Contact</h2>
+        <div class="contact-container">
+            <div class="info-container">
+                <div class="info-subheading">Got a problem to solve?</div>
+                <p>Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</p>
+                <div class="info-cta">Need a Frontend developer? <span>Contact me!</span></div>
+                <img class="ellipse-1" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
+            </div>
+            <div class="form-container">
+                <form class="form" action="" method="POST">
+                    <input class="form-input" type="text" name="name" placeholder="Your name" required>
+                    <input class="form-input" type="email" name="e-mail" placeholder="Your email" required>
+                    <textarea class="form-text" name="message" placeholder="Your message"></textarea>
+                    <div class="pp-checkbox-container">
+                        <input type="checkbox" name="privacy policy" value="accepted">
+                        <span class="pp-note">I've read the <a class="pp-link" href="#">privacy policy</a> and agree to the processing of my data as outlined.</span>
+                    </div>
+                    <button class="main-button bg-transp" type="submit">Say hello ;)</button>
+                </form>
+                <img class="ellipse-2" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
+            </div>
+        </div>
+        <div class="arrow-wrapper">
+            <a href="#" class="arrow-subwrapper">
+                <img class="arrow-main" src="./assets/img/arrow-transp.svg" alt="Arrow main">
+                <img class="arrow-hover" src="./assets/img/arrow-blue.svg" alt="Arrow hover">
+            </a>
+        </div>
+    </div>
+</section>
