--- a/src/styles.scss
+++ b/src/styles.scss
@@ -163,6 +163,7 @@
 html,
 body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -204,6 +205,7 @@ h4 {
     background-position: bottom right;
     position: relative;
     overflow: hidden;
+    cursor: pointer;
 
     &:hover {
         color: white;
