style(my-work): text align

--- a/src/app/main-content/my-work/work-sample/work-sample.component.scss
+++ b/src/app/main-content/my-work/work-sample/work-sample.component.scss
@@ -58,6 +58,10 @@
         padding-bottom: 32px;
     }
 
+    .t-end {
+        text-align: end;
+    }
+
     .buttons {
 
         .secondary-button {
