--- a/src/app/main-content/my-work/work-sample/work-sample.component.html
+++ b/src/app/main-content/my-work/work-sample/work-sample.component.html
@@ -10,7 +10,7 @@
     <div class="work-description" [class.ai-end]="index % 2 !== 0">
         <h3>{{ sample.title }}</h3>
         <div>{{ sample.tools }}</div>
-        <p>{{ sample.description }}</p>
+        <p [class.t-end]="index % 2 !== 0">{{ sample.description }}</p>
         <div class="buttons">
             <a href="" class="main-button">GitHub</a>
             <a href="" class="secondary-button">Live test</a>
