style(footer): initial styling

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,28 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <div class="footer-container">
+            <div class="logo-link">
+                <a routerLink="/">
+                    <img src="./assets/img/logo.svg" alt="Logo">
+                </a>
+            </div>
+            <div class="footer-info">
+                <div class="name">© Devrim Köpeli 2024</div>
+            </div>
+            <div class="footer-icons">
+                <a href="">
+                    <img src="./assets/img/github-white.svg" alt="Github">
+                </a>
+                <a href="">
+                    <img src="./assets/img/message-white.svg" alt="Message">
+                </a>
+                <a href="">
+                    <img src="./assets/img/linkedin-white.svg" alt="LinkedIn">
+                </a>
+            </div>
+        </div>
+        <div class="imprint-wrapper">
+            <a class="imprint-link" routerLink="/imprint">Imprint</a>
+        </div>
+    </div>
+</footer>
