style: content-width to 1440px

--- a/src/app/main-content/skill-set/skill-set.component.scss
+++ b/src/app/main-content/skill-set/skill-set.component.scss
@@ -25,7 +25,8 @@ h2 {
 
     .icon-container {
         @include flexbox();
-        flex: 1;
+        max-width: 220px;
+        width: 100%;
 
         > div {
             width: max-content;
