feat(contact): form validation added

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -8,19 +8,7 @@
                 <div class="info-cta">Need a Frontend developer? <span>Contact me!</span></div>
                 <img class="ellipse-1" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
             </div>
-            <div class="form-container">
-                <form class="form" action="" method="POST">
-                    <input class="form-input" type="text" name="name" placeholder="Your name" required>
-                    <input class="form-input" type="email" name="e-mail" placeholder="Your email" required>
-                    <textarea class="form-text" name="message" placeholder="Your message"></textarea>
-                    <div class="pp-checkbox-container">
-                        <input type="checkbox" name="privacy policy" value="accepted">
-                        <span class="pp-note">I've read the <a class="pp-link" href="#">privacy policy</a> and agree to the processing of my data as outlined.</span>
-                    </div>
-                    <button class="main-button bg-transp" type="submit">Say hello ;)</button>
-                </form>
-                <img class="ellipse-2" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
-            </div>
+            <app-contact-form class="w-50"></app-contact-form>
         </div>
         <div class="arrow-wrapper">
             <a href="#" class="arrow-subwrapper">
