--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -55,83 +55,6 @@ h2 {
     }
 }
 
-.form-container {
-    width: 50%;
-    position: relative;
-
-    .form {
-        @include flexbox($fd: column);
-    }
-
-    .form-input,
-    .form-text {
-        font-family: inherit;
-        -webkit-apppearance: none;
-        appearance: none;
-        width: 100%;
-        margin-bottom: 32px;
-        background-color: white;
-        padding: 16px 24px;
-        border: 1px solid $main-color;
-        border-radius: 12px;
-
-        letter-spacing: 0.5px;
-        font-size: 16px;
-        color: rgb(60, 60, 60);
-        line-height: 1.3;
-    }
-
-    .form-text {
-        resize: none;
-        height: 200px;
-        margin-bottom: 24px;
-    }
-
-    .form-input::placeholder,
-    .form-text::placeholder {
-        color: $font-black;
-    }
-
-    .form-input:hover,
-    .form-text:hover {
-        outline: 1px solid $main-color;
-    }
-
-    .form-input:focus,
-    .form-text:focus {
-        outline: unset;
-    }
-
-    .bg-transp {
-        background-color: transparent;
-    }
-
-    .ellipse-2 {
-        position: absolute;
-        z-index: -1;
-        bottom: -32px;
-        right: 24px;
-        width: 73px;
-    }
-
-    .pp-checkbox-container {
-        padding-bottom: 48px;
-    }
-
-    .pp-note {
-        font-size: 14px;
-    }
-
-    .pp-link {
-        color: $main-color;
-        text-decoration: none;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
-}
-
 .arrow-wrapper {
     position: absolute;
     bottom: -80px;
@@ -168,4 +91,8 @@ h2 {
 
 .arrow-subwrapper:hover .arrow-main {
     opacity: 0;
+}
+
+.w-50 {
+    width: 50%;
 }
