style(hero): scroll line animation added

--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -26,7 +26,9 @@
     </div>
     <div class="hero__scroll">
         <span>SCROLL</span>
-        <div></div>
+        <div class="scroll-wrapper">
+            <div class="scroll-line"></div>
+        </div>
     </div>
     
     <img class="ellipse-overlap" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
