feat: scroll to element location on route change

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,5 +1,5 @@
 <app-hero></app-hero>
-<app-about-me></app-about-me>
-<app-skill-set></app-skill-set>
-<app-my-work></app-my-work>
+<app-about-me id="about"></app-about-me>
+<app-skill-set id="skills"></app-skill-set>
+<app-my-work id="work"></app-my-work>
 <app-contact></app-contact>
