chore: urls to links added

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -8,7 +8,7 @@
                     <br><br>
                     If you think I'd be a good match for your projects, contact me!
                 </p>
-                <a href="" class="main-button">Send a message</a>
+                <a href="#contact" class="main-button">Send a message</a>
             </div>
         </div>
         <img class="ellipse" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
