--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -2,4 +2,4 @@
 <app-about-me id="about"></app-about-me>
 <app-skill-set id="skills"></app-skill-set>
 <app-my-work id="work"></app-my-work>
-<app-contact></app-contact>
+<app-contact id="contact"></app-contact>
