--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -10,13 +10,13 @@
                 <div class="name">© Devrim Köpeli 2024</div>
             </div>
             <div class="footer-icons">
-                <a href="">
+                <a href="https://github.com/devkoepeli" target="_blank">
                     <img src="./assets/img/github-white.svg" alt="Github">
                 </a>
-                <a href="">
+                <a href="mailto:devrim.koepeli@outlook.com">
                     <img src="./assets/img/message-white.svg" alt="Message">
                 </a>
-                <a href="">
+                <a href="https://ch.linkedin.com/" target="_blank">
                     <img src="./assets/img/linkedin-white.svg" alt="LinkedIn">
                 </a>
             </div>
