--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -10,13 +10,13 @@
             </div>
         </div>
         <div class="hero__icons">
-            <a href="">
+            <a href="https://github.com/devkoepeli" target="_blank">
                 <img src="./assets/img/github.svg" alt="GitHub Icon">
             </a>
-            <a href="">
+            <a href="mailto:devrim.koepeli@outlook.com">
                 <img src="./assets/img/mail.svg" alt="Mail Icon">
             </a>
-            <a href="">
+            <a href="https://ch.linkedin.com/" target="_blank">
                 <img src="./assets/img/linkedin.svg" alt="Linkedin Icon">
             </a>
         </div>
