--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -21,8 +21,8 @@
                 </a>
             </div>
         </div>
-        <div class="imprint-wrapper">
-            <a class="imprint-link" routerLink="/imprint">Imprint</a>
+        <div class="legal-notice-wrapper">
+            <a class="legal-notice-link" routerLink="/legal-notice">Legal Notice</a>
         </div>
     </div>
 </footer>
