--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -20,11 +20,11 @@ footer {
     }
 }
 
-.imprint-wrapper {
+.legal-notice-wrapper {
     text-align: center;
 }
 
-.imprint-link {
+.legal-notice-link {
     color: $font-white;
     text-decoration: none;
     font-size: 16px;
@@ -35,7 +35,7 @@ footer {
     border-bottom: 2px solid transparent;
 }
 
-.imprint-link::after {
+.legal-notice-link::after {
     content: '';
     position: absolute;
     left: 0;
@@ -45,7 +45,7 @@ footer {
     transition: all .15s ease;
 }
 
-.imprint-link:hover::after {
+.legal-notice-link:hover::after {
     right: 0; 
 }
 
